--- a/Day 8 - Form Wave Animation/index.html
+++ b/Day 8 - Form Wave Animation/index.html
@@ -17,7 +17,7 @@
       <h1>Plase Login</h1>
       <form action="">
         <div class="form-control">
-          <input type="text" required />
+          <input class="email" type="text" required />
           <label for="">Email</label>
         </div>
         <div class="form-control">
